<resources>
    <string name="app_name">Coding</string>
    <string name="coding_commit">动态</string>
    <string name="coding_code">代码</string>
    <string name="coding_readme">关于</string>
    <string name="coding_download">下载</string>
    <string name="coding_document">文档</string>
    <string name="coding_loading">正在加载...</string>
    <string name="coding_download_exist_hint">已下载，路径：%s</string>
    <string name="coding_login_failure">登录失败!</string>
    <string name="coding_connect_project">连接项目</string>
    <string name="coding_push_title" formatted="false">%s %s 项目分支 %s</string>
    <string name="coding_commit_message" formatted="false">%s : [%s] %s</string>
    <string name="coding_download_hint">确认下载最新源码？</string>
    <string name="coding_commit_info_format" formatted="false">%s 于%s提交</string>
    <string name="coding_second_format" formatted="false">%d秒前</string>
    <string name="coding_minute_format" formatted="false">%d分钟前</string>
    <string name="coding_hour_format" formatted="false">%d小时前</string>
    <string name="coding_day_format" formatted="false">%d天前</string>
    <string name="coding_date_format" formatted="false">yyyy/MM/dd</string>
    <string name="coding_change_format" formatted="false">%d个文件</string>
    <string name="coding_addition_format" formatted="false">%d个增加</string>
    <string name="coding_deletion_format" formatted="false">%d个删除</string>
    <string name="coding_image_deleted">服务端图片已删除，无法预览</string>
    <string name="coding_login_authorize">登录授权</string>
    <string name="coding_authorize_success">授权成功</string>
    <string name="coding_authorize_failure">授权失败</string>
    <string name="coding_rate_limit_tip">访问限制: 未刷新</string>
    <string name="coding_rate_limit_format" formatted="false">访问限制:  %d/%d</string>
</resources>
